<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2022 The Android Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	
    <!-- Category title -->
    <string name="leeco_settings_title">Leeco Settings</string>
    <string name="camera_pref_title">Camera</string>
    <string name="battery_settings_title">Battery</string>
    <string name="cdla_settings_title">Audio</string>
    <string name="graphics_title">Graphics</string>
    <string name="system_title">System</string>
    <string name="spectrum_profile_title">CPU Profiles</string>
    <string name="thermal_profile_title">CPU Thermal Profiles</string>

    <!-- Kcal -->
    <string name="kcal_title">Display color</string>
    <string name="kcal_summary">Display color calibration using KCAL. Reboot device after disable or reset.</string>
    <string name="kcal_enabled_title">Enable KCAL</string>
    <string name="kcal_enabled_summary">Turn on display calibration using KCAL.</string>
    <string name="kcal_red">Red</string>
    <string name="kcal_green">Green</string>
    <string name="kcal_blue">Blue</string>
    <string name="kcal_saturation">Saturation</string>
    <string name="kcal_contrast">Constrast</string>
    <string name="menu_reset">Reset</string>
    <string name="kcal_color_temp">Color temperature (K)</string>	

    <!-- Battery -->
    <string name="qc_title">Quick Charge</string>
    <string name="qc_summary">Requires Disconnect/Reconnect the charger after Enable/disable.</string>

    <!-- Live display -->
    <string name="live_display_title">Display</string>
    <string name="live_display_summary">Live display settings.</string>
	
    <!-- Screen Gestures -->
    <string name="gestures_title">Screen gestures</string>
    <string name="gestures_summary">Enable/Disable screen gestures.</string>
	
    <!-- Sound -->
    <string name="cdla_title">CDLA</string>
    <string name="cdla_summary">For original EUI Audio.</string>

    <!-- Camera focus fix-->
    <string name="camera_focus_fix_title">Autofocus Fix</string>
    <string name="camera_focus_fix_summary">Enable it only if your device has autofocus problem</string>
	
    <!-- Camera HAL3-->
    <string name="camera_hal3_title">Disable/Enable HAL3</string>
    <string name="camera_hal3_summary">Disabling HAL3 will force the usage of HAL1 instead. Please note that Gcam mods require HAL3 and you must wait a minute before using a camera app as it will take time to restart the camera HAL and Service.</string>

	<!-- CPU Profiles -->
    <string name="spectrum_title">CPU energy Profile</string>
    <string name="spectrum_summary">Choose your power performance/saver profile.</string>
    <string name="spectrum_dialogTitle">CPU Power profile</string>
	
    <!-- Thermal Profiles -->
    <string name="thermal_title">Thermal Profile</string>
    <string name="thermal_summary">Choose your thermal profile. Beware of high temperatures when applying performance, video or gaming profiles.</string>
    <string name="thermal_dialogTitle">CPU thermal profile. It needs a reboot to apply.</string>

    <!-- App powersave and notifications -->
    <string name="powersave_settings_title">Power Save</string>
    <string name="prefs_battery_saver_title">System and user applications</string>
    <string name="prefs_battery_saver_summary">Battery optimization for user and system applications.</string>
    <string name="prefs_app_options_title">Notification settings</string>
    <string name="prefs_app_options_summary">Notification settings for user and system applications.</string>
    <string name="app_title">App privacy</string>
    <string name="prefs_app_unknown_title">Unknown or downloaded applications</string>
    <string name="prefs_app_unknown_summary">Installation options settings for downloaded or unknown applications.</string>

</resources>
