<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="camera_pref"
        android:title="@string/camera_pref_title" >

        <SwitchPreference
            android:key="persist.camera.focus_fix"
            android:icon="@drawable/ic_leeco_camera_focus"
            android:defaultValue="false"
            android:title="@string/camera_focus_fix_title"
            android:summary="@string/camera_focus_fix_summary" />
			
        <SwitchPreference
            android:key="hal3"
            android:icon="@drawable/ic_leeco_camera_hal"
            android:defaultValue="true"
            android:title="@string/camera_hal3_title"
            android:summary="@string/camera_hal3_summary" />


    </PreferenceCategory>

    <PreferenceCategory
        android:key="batt"
        android:title="@string/battery_settings_title" >

        <SwitchPreference
            android:key="persist.sys.le_fast_chrg_enable"
            android:icon="@drawable/ic_leeco_battery_fast_charge"
            android:defaultValue="true"
            android:title="@string/qc_title"
            android:summary="@string/qc_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="cdla"
        android:title="@string/cdla_settings_title" >
		
        <SwitchPreference
            android:key="persist.cdla_enable"
            android:icon="@drawable/ic_leeco_cdla"
            android:defaultValue="false"
            android:title="@string/cdla_title"
            android:summary="@string/cdla_summary" />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/graphics_title">

        <PreferenceScreen
                android:key="kcal"
                android:icon="@drawable/ic_leeco_kcal"
                android:fragment="com.lineageos.settings.leecosettings.DisplayCalibration"
                android:summary="@string/kcal_summary"
                android:title="@string/kcal_title" />

    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="display"
        android:title="@string/system_title">
 
        <Preference
		android:icon="@drawable/ic_leeco_display"
		android:title="@string/live_display_title"
		android:summary="@string/live_display_summary">
        <intent android:action="com.android.settings.LIVEDISPLAY_SETTINGS" />
        </Preference>
		
		<Preference
		android:icon="@drawable/ic_leeco_gestures"
		android:title="@string/gestures_title"
		android:summary="@string/gestures_summary">
        <intent android:targetPackage="com.fb.fluid"
		android:action="android.intent.action.MAIN"
		android:targetClass="com.fb.fluid.ui.ActivitySettings" />
        </Preference>
		
    </PreferenceCategory>

    <PreferenceCategory
        android:key="spectrum_profile"
        android:title="@string/spectrum_profile_title" >

		<ListPreference
			android:key="spectrum"
            android:icon="@drawable/ic_leeco_cpu"
			android:title="@string/spectrum_title"
			android:summary="@string/spectrum_summary"
			android:defaultValue="5"
			android:entries="@array/spectrum_profiles"
			android:entryValues="@array/spectrum_values"
			android:dialogTitle="@string/spectrum_dialogTitle" />

    </PreferenceCategory>
	
    <PreferenceCategory
        android:key="thermal_profile"
        android:title="@string/thermal_profile_title" >

		<ListPreference
			android:key="thermal"
            android:icon="@drawable/ic_leeco_thermal"
			android:title="@string/thermal_title"
			android:summary="@string/thermal_summary"
			android:defaultValue="5"
			android:entries="@array/thermal_profiles"
			android:entryValues="@array/thermal_values"
			android:dialogTitle="@string/thermal_dialogTitle" />

    </PreferenceCategory>
	
    <PreferenceCategory android:title="@string/app_title">
        <Preference android:icon="@drawable/ic_leeco_battery_saver" android:title="@string/prefs_battery_saver_title" android:summary="@string/prefs_battery_saver_summary">
            <intent android:action="android.settings.IGNORE_BATTERY_OPTIMIZATION_SETTINGS" />
        </Preference>
        <Preference android:icon="@drawable/ic_leeco_notifications" android:title="@string/prefs_app_options_title" android:summary="@string/prefs_app_options_summary">
            <intent android:action="android.settings.ALL_APPS_NOTIFICATION_SETTINGS" />
        </Preference>
        <Preference android:icon="@drawable/ic_leeco_apps" android:title="@string/prefs_app_unknown_title" android:summary="@string/prefs_app_unknown_summary">
            <intent android:action="android.settings.MANAGE_UNKNOWN_APP_SOURCES" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
