<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018-2021 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/camera_pref_title" android:key="camera_pref">

    <SwitchPreference
        android:key="camera_focus_enable"
        android:icon="@drawable/ic_leeco_camera_focus"
        android:defaultValue="false"
        android:title="@string/camera_focus_fix_title"
        android:summary="@string/camera_focus_fix_summary" />
        
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/battery_settings_title" android:key="batt">
	
    <SwitchPreference
        android:key="quick_charge_enable"
        android:icon="@drawable/ic_leeco_battery_fast_charge"
        android:defaultValue="true"
        android:title="@string/quick_charge_title"
        android:summary="@string/quick_charge_summary" />
        
     </PreferenceCategory>
    <PreferenceCategory android:title="@string/app_title">
        <Preference android:icon="@drawable/ic_leeco_battery_saver" android:title="@string/prefs_battery_saver_title" android:summary="@string/prefs_battery_saver_summary">
            <intent android:action="android.settings.IGNORE_BATTERY_OPTIMIZATION_SETTINGS" />
        </Preference>
        <Preference android:icon="@drawable/ic_leeco_notifications" android:title="@string/prefs_app_options_title" android:summary="@string/prefs_app_options_summary">
            <intent android:action="android.settings.ALL_APPS_NOTIFICATION_SETTINGS" />
        </Preference>
        <Preference android:icon="@drawable/ic_leeco_apps" android:title="@string/prefs_app_unknown_title" android:summary="@string/prefs_app_unknown_summary">
            <intent android:action="android.settings.MANAGE_UNKNOWN_APP_SOURCES" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
